@@ -69,6 +69,8 @@ FastFlix supports using generated or [extracted JSON HDR10+ Metadata](https://gi
 dependent on a FFmpeg version that has been compiled with x265 that has HDR10+ support. [BtbN's Windows FFmpeg builds](https://github.com/BtbN/FFmpeg-Builds) 
 have this support as of 10/23/2020 and may require a [manual upgrade](https://github.com/cdgriffith/FastFlix/wiki/Updating-FFmpeg).
 
+If you add HDR10+ metadata file, make sure the encoding log does NOT contain the line `x265 [warning]: –dhdr10-info disabled. Enable HDR10_PLUS in cmake` or else it is unsupported. 
+
 ## HLG 
 
 FastFlix (v4.0.2+) passes through HLG color transfer information to everything except webp and GIF. 
