@@ -3064,3 +3064,52 @@ No crop, scale, rotation,flip nor any other filters will be applied.:
   ita: Nessun ritaglio, scala, rotazione, flip o qualsiasi altro filtro sarà applicato.
   spa: No se aplicará ningún filtro de recorte, escala, rotación, volteo ni ningún otro.
   zho: 不会应用裁剪、缩放、旋转、翻转或任何其他滤镜。
+Are you sure you want to stop the current encode?:
+  deu: Sind Sie sicher, dass Sie die aktuelle Kodierung stoppen wollen?
+  eng: Are you sure you want to stop the current encode?
+  fra: Êtes-vous sûr de vouloir arrêter le codage actuel?
+  ita: Sei sicuro di voler fermare la codifica in corso?
+  spa: ¿Está seguro de que quiere detener la codificación actual?
+  zho: 你确定要停止当前的编码吗？
+Confirm Stop Encode:
+  deu: Bestätigen Sie Stop Encode
+  eng: Confirm Stop Encode
+  fra: Confirmer le code d'arrêt
+  ita: Confermare Stop Encode
+  spa: Confirmar parada de codificación
+  zho: 确认 停止 编码
+Use Sane Audio Selection (updatable in config file):
+  deu: Audioauswahl verwenden (aktualisierbar in der Konfigurationsdatei)
+  eng: Use Sane Audio Selection (updatable in config file)
+  fra: Utiliser la sélection audio (mise à jour dans le fichier de configuration)
+  ita: Usa la selezione audio (aggiornabile nel file di configurazione)
+  spa: Utilizar la selección de audio (actualizable en el archivo de configuración)
+  zho: 使用音频选择(可在配置文件中更新)
+HDR10+ Parser:
+  deu: HDR10+ Parser
+  eng: HDR10+ Parser
+  fra: HDR10+ Parser
+  ita: HDR10+ Parser
+  spa: Analizador HDR10+
+  zho: HDR10+解析器
+Not all items in the queue were completed:
+  deu: Nicht alle Elemente in der Warteschlange wurden abgeschlossen
+  eng: Not all items in the queue were completed
+  fra: Tous les articles dans la file d'attente n'ont pas été complétés
+  ita: Non tutti gli elementi in coda sono stati completati
+  spa: No se han completado todos los elementos de la cola
+  zho: 并非队列中的所有项目都已完成
+Would you like to keep them in the queue?:
+  deu: Möchten Sie sie in der Warteschlange behalten?
+  eng: Would you like to keep them in the queue?
+  fra: Souhaitez-vous les garder dans la file d'attente?
+  ita: Volete tenerli in coda?
+  spa: ¿Quiere mantenerlos en la cola?
+  zho: 你想把他们留在队列中吗？
+Recover Queue Items:
+  deu: Warteschlangenelemente wiederherstellen
+  eng: Recover Queue Items
+  fra: Récupérer les articles en file d'attente
+  ita: Recuperare elementi della coda
+  spa: Recuperar elementos de la cola
+  zho: 恢复队列中的项目
