@@ -36,14 +36,14 @@ recommended_crfs = [
     "25",
     "24",
     "23 (x264 default)",
-    "22",
-    "21",
-    "20",
-    "19 (480p)",
-    "18 (720p)",
-    "17 (1080p)",
-    "16 (1440p)",
-    "15 (2160p)",
+    "22 (1080p)",
+    "21 (1440p)",
+    "20 (2160p)",
+    "19",
+    "18",
+    "17",
+    "16",
+    "15",
     "14 (higher quality)",
     "Custom",
 ]
