@@ -27,8 +27,6 @@ from qtpy import QtCore, QtGui, QtWidgets
 
 from fastflix.language import t
 
-QtWidgets.QApplication.setAttribute(QtCore.Qt.AA_EnableHighDpiScaling, True)
-QtWidgets.QApplication.setAttribute(QtCore.Qt.AA_UseHighDpiPixmaps, True)
 DEVMODE = os.getenv("DEVMODE", "").lower() in ("1", "true")
 
 my_data = str(Path(pkg_resources.resource_filename(__name__, f"../data/icon.ico")).resolve())
